Reset Password page done

--- a/src/pages/ForgotPassword.html
+++ b/src/pages/ForgotPassword.html
@@ -68,13 +68,15 @@
             backdrop-filter: blur(5px);
             border-radius: 20px;
             padding: 2rem;
-            box-shadow: 
-                20px -10px 40px rgba(255, 255, 255, 0.8), 
-                -15px 10px 35px rgba(0, 0, 0, 0.7), 
+            box-shadow:
+                20px -10px 40px rgba(255, 255, 255, 0.8),
+                -15px 10px 35px rgba(0, 0, 0, 0.7),
                 -4px 8px 30px rgba(0, 0, 0, 0.7);
         }
 
-        .card img { width: 45%;}
+        .card img {
+            width: 45%;
+        }
 
         .card h2 {
             color: #fff;
@@ -87,32 +89,57 @@
         .card input {
             width: 100% !important;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            border-radius: 10px ;
-            padding: 10px 22px ;
-            font-size: 23px ;
-            border: 1px solid #21ba45;
+            border-radius: 10px;
+            padding: 10px 22px;
+            font-size: 23px;
             outline: none;
             margin: 10px 0;
+            background: rgba(36, 37, 65, 0.55);
+            border: 1px solid rgba(36, 37, 65, 0.55);
+            color: #fff;
+            letter-spacing: .5px;
+            transition: 0.3s ease;
+        }
 
-            background: rgba(36, 37, 65, 0.75) ;
-            color: #fff ;
+        .card input::placeholder {
+            color: #bababa;
+            font-size: 18px;
         }
 
         .card input:focus {
-            border: 1px solid #21ba45 !important;
+            border: 1px solid #21ba45;
+            background: rgba(36, 37, 65, 0.75);
+            box-shadow: 0 4px 10px rgba(36, 37, 65, 0.4);
         }
 
         .card button {
+            padding: 10px;
+            margin: 10px 0;
             width: 100%;
-            border-radius: 10px !important;
-            letter-spacing: 2px;
+            border-radius: 10px;
+            letter-spacing: 1px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
-        .card .reset-password-btn {
-            margin: 30px 0;
+        .card .error-msg {
+            color: red;
         }
 
-        /*# sourceMappingURL=Login.css.map */
+        .alert {
+            padding: 7px;
+            font-size: 16px;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+        }
+        .btn-close {
+            position: absolute;
+            width: 30px !important;
+            height: 30px !important;
+            margin: 0 !important;
+            padding: 5px 10px !important;
+        }
+
+
     </style>
 
 
@@ -121,19 +148,19 @@
 <body>
 
     <div class="card text-center">
-        <form action="">
+        <form action="" id="form">
 
             <img src="https://www.timeshighereducation.com/sites/default/files/styles/medium/public/nuu_logo.png?itok=LEuSDr_z"
                 alt="">
 
             <h2>Set New Password</h2>
 
-            <input type="password" class="input" placeholder="Write new password">
-            <input type="password" class="input" placeholder="Repeat the password">
+            <input type="password" class="input" placeholder="Write new password" required minlength="6">
+            <input type="password" class="input" placeholder="Repeat the password" required minlength="6">
 
-            <h4 class="error-msg">Password mismatch!</h4>
-
-            <button class="btn btn-success">Change</button>
+            <div id="liveAlertPlaceholder"></div>
+            
+            <button class="btn btn-success" type="submit">Change</button>
 
         </form>
     </div>
@@ -141,5 +168,34 @@
 
 
 </body>
+
+<script>
+    const alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+    const appendAlert = (message, type) => {
+        const wrapper = document.createElement('div')
+        wrapper.innerHTML = [
+            `<div class="alert alert-${type} alert-dismissible bg-${type} text-white" role="alert">`,
+            `   <div>${message}</div>`,
+            '   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>',
+            '</div>'
+        ].join('')
+
+        alertPlaceholder.append(wrapper)
+    }
+
+    form.addEventListener("submit", e => {
+        e.preventDefault();
+        if (e.target['0'].value.length < 7 || e.target['1'].value.length < 7) {
+            appendAlert('Password must have at least 6 characters', 'danger')
+        } else if (e.target['0'].value !== e.target['1'].value ) {
+            appendAlert('Password mismatch!', 'danger')
+        } else {
+            appendAlert('Password successfully updated!');
+            setTimeout(() => {
+                location = "http://localhost:3000/dashboard";
+            }, 1000)
+        }
+    }) 
+</script>
 
 </html>
