Reset Password page done

--- a/src/pages/ForgotPassword.html
+++ b/src/pages/ForgotPassword.html
@@ -153,7 +153,7 @@
             <img src="https://www.timeshighereducation.com/sites/default/files/styles/medium/public/nuu_logo.png?itok=LEuSDr_z"
                 alt="">
 
-            <h2>Set New Password</h2>
+            <h2>Reset Password</h2>
 
             <input type="password" class="input" placeholder="Write new password" required minlength="6">
             <input type="password" class="input" placeholder="Repeat the password" required minlength="6">
